updated entity